--- a/Ripley2019.yaml
+++ b/Ripley2019.yaml
@@ -495,9 +495,9 @@ Properties:
   Simulation World File: !!robotbuilder.data.properties.StringProperty {default: /usr/share/frcsim/worlds/GearsBotDemo.world,
     name: Simulation World File, validators: null, value: /usr/share/frcsim/worlds/GearsBotDemo.world}
   Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\decla\',
-    extension: null, folder: true, name: Wiring file location, validators: null, value: .\}
+    extension: null, folder: true, name: Wiring file location, validators: null, value: ./}
   Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\decla\FRCProjects',
-    extension: null, folder: true, name: Export Directory, validators: null, value: .\}
+    extension: null, folder: true, name: Export Directory, validators: null, value: ./}
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
 Base: Robot
